--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "wizardsoloist1983@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
+  }
 }
